# ingest

./: main.py  metadata.csv  prepare_metadata.py  pyproject.toml  sophus_ingestion.csv
ingest/: connector.py  task.py
tests/: test_ingest.py  test_task.py
